--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Backend para o BDownload",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "./setup.sh"
+ "dev": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
