--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "yt-dlp-exec": "^2.0.0"
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": ">=18.x"
