--- a/package.json
+++ b/package.json
@@ -5,15 +5,26 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js",
-    "setup": "./setup.sh"
+    "dev": "nodemon server.js",
+    "setup": "./setup.sh",
+    "install-deps": "npm install",
+    "postinstall": "node install-deps.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "check": "node -e \"require('./server.js'); console.log('Todas as dependências estão OK')\""
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "express-rate-limit": "^7.1.3"
+    "express-rate-limit": "^7.1.3",
+    "axios": "^1.6.7",
+    "ffmpeg-static": "^5.1.0",
+    "yt-dlp-exec": "^1.2.0",
+    "nodemon": "^3.1.0",
+    "chalk": "^4.1.2",
+    "dotenv": "^16.4.1"
   },
   "engines": {
-    "node": ">=18.x"
+    "node": ">=18.x",
+    "npm": ">=9.x"
   }
 }
