--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon server.js",
     "setup": "./setup.sh",
     "postinstall": "node install-deps.js",
-    "check": "node -e \"require('./server.js'); console.log('Todas as dependências estão OK')\""
+    "check": "node -e \"try { require('cheerio'); require('./server.js'); console.log('✅ Todas as dependências estão OK'); } catch (e) { console.error('❌ Falta dependência:', e.message); process.exit(1); }\""
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -18,7 +18,8 @@
     "ffmpeg-static": "^5.1.0",
     "nodemon": "^3.1.0",
     "chalk": "^4.1.2",
-    "dotenv": "^16.4.1"
+    "dotenv": "^16.4.1",
+    "cheerio": "^1.0.0-rc.12"
   },
   "engines": {
     "node": ">=18.x",
