--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "Backend para o BDownload",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
+    "prestart": "npm install && ./setup.sh",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "setup": "./setup.sh",
-    "postinstall": "node install-deps.js",
-    "check": "node -e \"try { require('cheerio'); require('./server.js'); console.log('✅ Todas as dependências estão OK'); } catch (e) { console.error('❌ Falta dependência:', e.message); process.exit(1); }\""
+    "check": "node -e \"try { require('cheerio'); console.log('✅ Dependências OK'); } catch (e) { console.error('❌ Falta dependência:', e.message); process.exit(1); }\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -17,12 +19,12 @@
     "axios": "^1.6.7",
     "ffmpeg-static": "^5.1.0",
     "nodemon": "^3.1.0",
-    "chalk": "^4.1.2",
     "dotenv": "^16.4.1",
-    "cheerio": "^1.0.0-rc.12"
+    "cheerio": "^1.0.0-rc.12",
+    "yt-dlp-exec": "^1.2.4"
   },
   "engines": {
-    "node": ">=18.x",
+    "node": "20.x",
     "npm": ">=9.x"
   }
 }
