--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "ffmpeg-static": "^5.1.0",
     "nodemon": "^3.1.0",
     "dotenv": "^16.4.1",
-    "cheerio": "^1.0.0-rc.12",
-    "yt-dlp-exec": "^1.3.1"
+    "cheerio": "^1.0.0-rc.12"
   },
   "engines": {
     "node": "20.x",
