--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "Backend para o BDownload",
   "main": "server.js",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "prestart": "npm install && ./setup.sh",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "setup": "./setup.sh",
-    "check": "node -e \"try { require('cheerio'); console.log('✅ Dependências OK'); } catch (e) { console.error('❌ Falta dependência:', e.message); process.exit(1); }\"",
+    "check": "node -e \"try { import('cheerio').then(() => console.log('✅ Dependências OK')); } catch (e) { console.error('❌ Falta dependência:', e.message); process.exit(1); }\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -20,7 +20,8 @@
     "ffmpeg-static": "^5.1.0",
     "nodemon": "^3.1.0",
     "dotenv": "^16.4.1",
-    "cheerio": "^1.0.0-rc.12"
+    "cheerio": "^1.0.0-rc.12",
+    "body-parser": "^1.20.2"
   },
   "engines": {
     "node": "20.x",
