--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
+    "fluent-ffmpeg": "^2.1.2",
+    "yt-dlp-exec": "^2.0.0",
+    "uuid": "^9.0.0",
     "express-rate-limit": "^7.1.3",
-    "axios": "^1.6.7",
-    "ffmpeg-static": "^5.1.0",
-    "nodemon": "^3.1.0",
-    "dotenv": "^16.4.1",
-    "cheerio": "^1.0.0-rc.12",
-    "body-parser": "^1.20.2"
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1",
+    "express-status-monitor": "^1.3.4",
+    "compression": "^1.7.4",
+    "sanitize-filename": "^1.6.3",
+    "validator": "^13.11.0",
+    "ffmpeg-static": "^5.1.0"
   },
   "engines": {
     "node": "20.x",
