--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "fluent-ffmpeg": "^2.1.2",
-    "yt-dlp-exec": "^2.0.0",
+    "yt-dlp-wrap": "^1.1.0",
     "uuid": "^9.0.0",
     "express-rate-limit": "^7.1.3",
     "helmet": "^7.1.0",
