--- a/package.json
+++ b/package.json
@@ -1,36 +1,28 @@
 {
-  "name": "bdownload-backend",
+  "name": "y2mate-clone-backend",
   "version": "1.0.0",
-  "description": "Backend para o BDownload",
+  "description": "Servidor universal de download de vídeos baseado em yt-dlp",
   "main": "server.js",
-  "type": "module",
   "scripts": {
-    "prestart": "npm install && ./setup.sh",
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "setup": "./setup.sh",
-    "check": "node -e \"try { import('cheerio').then(() => console.log('✅ Dependências OK')); } catch (e) { console.error('❌ Falta dependência:', e.message); process.exit(1); }\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
+  "keywords": [
+    "yt-dlp",
+    "video-downloader",
+    "mp3",
+    "youtube",
+    "tiktok",
+    "soundcloud",
+    "backend"
+  ],
+  "author": "João Paulo",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
-    "yt-dlp-wrap": "^1.1.0",
     "uuid": "^9.0.0",
-    "express-rate-limit": "^7.1.3",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
-    "winston": "^3.11.0",
-    "winston-daily-rotate-file": "^4.7.1",
-    "express-status-monitor": "^1.3.4",
-    "compression": "^1.7.4",
-    "sanitize-filename": "^1.6.3",
-    "validator": "^13.11.0",
-    "ffmpeg-static": "^5.1.0"
-  },
-  "engines": {
-    "node": "20.x",
-    "npm": ">=9.x"
+    "yt-dlp-exec": "^1.4.0"
   }
 }
+
