--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
     "uuid": "^9.0.0",
-    "yt-dlp-exec": "^1.4.0"
+    "yt-dlp-exec": "*"
   }
 }
 
