--- a/package.json
+++ b/package.json
@@ -1,28 +1,16 @@
 {
-  "name": "y2mate-clone-backend",
+  "name": "y2mate-backend-fast",
   "version": "1.0.0",
-  "description": "Servidor universal de download de vídeos baseado em yt-dlp",
+  "description": "Servidor backend para baixar vídeos e áudios de múltiplas plataformas usando yt-dlp puro",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": [
-    "yt-dlp",
-    "video-downloader",
-    "mp3",
-    "youtube",
-    "tiktok",
-    "soundcloud",
-    "backend"
-  ],
-  "author": "João Paulo",
-  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
-    "uuid": "^9.0.0",
-    "yt-dlp-exec": "*"
+    "uuid": "^9.0.0"
   }
 }
 
