--- a/package.json
+++ b/package.json
@@ -1,16 +1,37 @@
 {
-  "name": "y2mate-backend-fast",
+  "name": "multi-platform-streamer-api",
   "version": "1.0.0",
-  "description": "Servidor backend para baixar vídeos e áudios de múltiplas plataformas usando yt-dlp puro",
+  "description": "API for streaming audio and video from multiple platforms including YouTube, Vimeo, TikTok, Instagram, etc.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "streaming",
+    "youtube",
+    "vimeo",
+    "tiktok",
+    "instagram",
+    "api"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "fluent-ffmpeg": "^2.1.2",
-    "uuid": "^9.0.0"
+    "express-rate-limit": "^6.7.0",
+    "googleapis": "^120.0.0",
+    "winston": "^3.10.0",
+    "ytdl-core": "^4.11.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=7.0.0"
   }
 }
-
